[package]
name = "arkworks-bls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
sha2 = "0.10"
hex-literal = "0.3.1"